# testTravelWebSiteProjectCW7

./: pyproject.toml
pages/: base_page.py  index_page_locators.py
resources/: constants.py
tests/: test_login.py
