[tool.poetry]
name = "testtravelwebsiteproject"
version = "0.1.0"
description = ""
authors = ["dhananjaya2007 <dhananjaya2007@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "4.24.0"
pytest = "8.3.3"
pytest-xdist = "3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
